# gcp-dataflow-to-composer-migration

./: .gitignore  README.md  combine-files.sh  pom.xml  pyproject.toml
config/: dagify-config.yaml
scripts/: beam_code_fixer.py  beam_code_transformer.py  beam_code_validator.py  dagify_integration.py  dataflow_migration.py
src/main/java/org/example/: SamplePipeline.java
templates/: dataflow_dag_template.py.j2
tests/: test_beam_migration.py
tests/resources/: SamplePipeline.java
